--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -138,6 +138,78 @@ doi="10.1007/s12539-019-00322-1"
   publisher={Nature Publishing Group}
 }
 
+@article{hosseini2018cryfa,
+  title={Cryfa: a secure encryption tool for genomic data},
+  author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
+  journal={Bioinformatics},
+  volume={35},
+  number={1},
+  pages={146--148},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{turing1936on,
+  title   = {On computable numbers, with an application to the {Entscheidungsproblem}},
+  author  = {Turing, Alan},
+  journal = {Proceedings of the London Mathematical Society},
+  volume  = {42},
+  number  = {2},
+  pages   = {230--265},
+  year    = {1936}
+}
+
+@book{li2009an,
+  title   = {An introduction to {Kolmogorov} complexity and its applications},
+  author  = {Li, M. and Vit{\'a}nyi, P.},
+  edition = {3rd},
+  year    = {2009},
+  publisher = {Springer}
+}
+
+@article{zenil2015two,
+ title = {Two-dimensional {Kolmogorov} complexity and an empirical validation of the {Coding} theorem method by compressibility},
+ author = {Zenil, Hector and Soler-Toscano, Fernando and Delahaye, Jean-Paul and Gauvrit, Nicolas},
+ year = 2015,
+ month = sep,
+ volume = 1,
+ pages = {e23},
+ journal = {PeerJ Computer Science},
+ issn = {2376-5992},
+ doi = {10.7717/peerj-cs.23}
+}
+
+@article{antao2018kolmogorov,
+author={Ant{\~a}o, R{\'o}mulo and Mota, Alexandre and Machado, J. A. Tenreiro},
+title="Kolmogorov complexity as a data similarity metric: application in mitochondrial {DNA}",
+journal="Nonlinear Dynamics",
+year="2018",
+month="Aug",
+day="01",
+volume="93",
+number="3",
+pages="1059--1071",
+issn="1573-269X",
+doi="10.1007/s11071-018-4245-7"
+}
+
+@article{faloutsos2007on,
+author="Faloutsos, Christos and Megalooikonomou, Vasileios",
+title="On data mining, compression, and Kolmogorov complexity",
+journal="Data Mining and Knowledge Discovery",
+year="2007",
+month="Aug",
+day="01",
+volume="15",
+number="1",
+pages="3--20",
+issn="1573-756X",
+doi="10.1007/s10618-006-0057-3"
+}
+
+
+
+
 
 
 
@@ -449,12 +521,6 @@ doi="10.1007/s12539-019-00322-1"
   publisher={Morgan Kaufmann}
 }
 
-@article{hosseini2018cryfa,
-	title={Cryfa: a secure encryption tool for genomic data},
-	author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
-	journal={Bioinformatics (Oxford, England)},
-	year={2018}
-}
 
 @article{deorowicz2018comsa,
 	title={CoMSA: Compression of protein multiple sequence alignment files.},
