--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -40,10 +40,10 @@
 \defaultLineSpace    		%%% Line spacing
 
 %%%\balance
-\input{method.tex}
+% \input{method.tex}
 % \input{experiment.tex}
 % \input{result.tex}
-% \input{tool.tex}
+\input{tool.tex}
 \input{references.tex}
 
 \end{document}
