--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -61,7 +61,9 @@
 	showstringspaces=false,
 	numbers=left,
 	numberstyle=\footnotesize\sffamily\color{gray},
-	mathescape=true
+	breaklines=true,
+	mathescape=false %,
+	% literate={\$}{{\$}}1
 }
 \lstdefinestyle{bash}{
 	language=bash,
