--- a/paper/tool.tex
+++ b/paper/tool.tex
@@ -164,11 +164,16 @@ OPTIONS
   --version          = show version
 \end{code}
 
-The arguments ``-r'' and ``-t'' are used to specify the reference and the target, respectively, which are highly recommended to have short names. Level of compression, that is an integer between 0 and 5, can be determined with ``-l''. By setting ``-m'' to an integer value, only those regions in the reference file that are bigger than that value can be considered for compression. Triggering ``-nr'' makes the tool not to perform the reference-free compression (self-complexity computation) part.
+The arguments ``-r'' and ``-t'' are used to specify the reference and the target, respectively, which are highly recommended to have short names. 
+Level of compression, that is an integer between 0 and 5, can be determined with ``-l''. 
+By setting ``-m'' to an integer value, only those regions in the reference file that are bigger than that value would be able to be considered for compression.
 
-In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. Note that we have set the entropy of `N's to 2.0, by default, but it is possible for the user to set them to another value of interest, by ``-e'' option.
+In implementation of the reference-based compression, we have replaced `N' bases in the references and the targets with `A's and `T's, respectively. On reference-free compression, they are replaced with `A's, in both references and targets. If a user tends to replace `N' bases in a sequence with a normal distribution of `A', `C', `G' and `T's, he/she can employ GOOSE toolkit~\cite{web-goose}. Note that we have set by default the entropy of `N's to 2.0, however, it can be changed to a value of interest using ``-e'' option.
 
-Building different finite-context models can be done in the multi-threaded fashion, setting ``-n'' to an integer. To find similar regions in the reference and the target, information profile (obtained by compression) needs to be filtered, of which the scale can be set as S (small), M (medium) or L (large). Size of the window and type of the windowing function can be set by ``-w'' and ``-wt'' options, respectively. Besides Hann window that is used as default to filter the profile information, we have implemented several other window functions, including Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by
+Creating multiple finite-context models and substitutional-tolerant Markov models can be done in a multi-threaded fashion by setting ``-n'' to an integer. 
+
+In the process of finding similar regions in the reference and the target sequences, the information content that would be obtained by compression needs to be filtered. Size of the window and type of the windowing function can be set by ``-f'' and ``-ft'' options, respectively.
+Besides Hann window that is used by default to smooth the information content (profile), we have implemented several other windowing functions, including Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by
 \begin{align}
   w[n] & = 1,
   \tag*{(rectangular)}                                                                                                                                        \\
@@ -185,63 +190,116 @@ Building different finite-context models can be done in the multi-threaded fashi
   w[n] & = 0.35577-0.48740\;\cos \left(\tfrac {2\pi n}{N}\right)+0.14423\;\cos \left(\tfrac {4\pi n}{N}\right)-0.01260\;\cos \left(\tfrac {6\pi n}{N}\right),
   \tag*{(Nuttall)}                                                                                                                                            \\
 \end{align}
-and are plotted in Fig.~\ref{fig.filters}. Instead of considering the complete profile information, the user is able to make samples of it by steps of which size can be determined by ``-d''. For the purpose of segmenting the filtered information profile, the average entropy of reference-based compression is used as the threshold, by default. However, this threshold can be altered by ``-th'' option.
-
+and are plotted in Fig.~\ref{fig.filters}.
+Scale of the filter can be set as S (small), M (medium) or L (large), using ``-fs''.
+Also, instead of considering the whole information content, the user is able to make samples of it by steps of which size can be determined by ``-d''.
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=.95\linewidth]{filters.pdf}
+  \includegraphics[width=\linewidth]{filters.pdf}
   \caption{Window functions.}
   \label{fig.filters}
 \end{figure}
 
-\smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are converted to sequences and then processed further. It is possible to save these sequences by ``-sb'' option.
+For the purpose of segmenting the filtered information content, the average entropy of reference-based compression is used by default as the threshold, but the threshold can be altered by ``-th'' option.
 
-After obtaining the information profile, \smashpp filters then removes it, by default. However, it is possible to save the profile by ``-sp'' option. The same thing happens to the filtered file, i.e., it is segmented and then is removed. But, the user can use ``-sf'' to save the filtered file. Also, the segmented files can be saved using ``-ss''. The user can save all the information profile, filtered and segmented files, by triggering ``-sa'' option.
+\smashpp is capable of finding even small similar regions in two sequences. However, there are some corner cases that the size of similar regions in reference and target are not balanced. \smashpp handles these cases using ``-rb'', ``-re'', ``-tb'' and ``-te'' options, that can resize the beginning and ending guards of reference and target regions, respectively.
+For example, if ``-tb 10'' is used, the first 10 bases in each target region will be ignored, which results in smaller regions.
+Note that when \smashpp wants to create the model of each target region to use it for compression of the reference
+% Note that using this option will affect the model that would be created 
 
-For the purpose of compression, either reference-based or reference-free, it is recommended to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression. Parameters of the models are described in detail in section~\ref{sec.methods}.
+-dp
 
-Running \smashpp (without visualization), positions of the similar regions in the reference and the target, and also complexity of the regions is saved in a ``*.pos'' file. To visualize this file, one can type
+Triggering ``-nr'' makes the tool not to perform the reference-free compression, self-complexity computation.
+
+\smashpp accepts \fasta and \fastq files as input, in addition to sequences. In these cases, the input files are first converted to sequences and then processed further. It is possible to save these sequences by ``-sb'' option.
+When the information profile is obtained, \smashpp smoothens then removes it by default. However, it can be preserved by ``-sp'' option.
+The same thing happens to the smoothed file, i.e., it is segmented then removed. But, the user can use ``-sf'' to save the filtered file. 
+Also, the segmented files can be saved using ``-ss''. 
+The user can save all the information profile (content), filtered and segmented files, by triggering ``-sa'' option.
+
+For the purpose of compression, it is recommended to use ``-l'' option, since it configures the models automatically. However, using ``-rm'' and ``-tm'', the user would be able to manually configure the reference model, for reference-based compression, and the target model, for reference-free compression, respectively. Parameters of the models are described in detail in section~\ref{sec.methods}.
+Note that using ``-ll'' option, the list of parameters that would be chosen for each model automatically, will be shown.
+
+Running \smashpp (without visualization), positions of the similar regions in the reference and the target, and also complexity of the regions is saved in a ``*.pos'' file. This file can be visualized by
 \begin{code}[style=bash]
   ./smashpp -viz
 \end{code}
 which gives
+% \begin{code}[style=bash]
+%   SYNOPSIS
+%   ./smashpp -viz  OPTIONS...  -o SVG-FILE  POS-FILE
+
+%   SAMPLE
+
+%   DESCRIPTION
+%   Mandatory arguments:
+%   POS-FILE                 positions file, generated by
+%   Smash++ tool (*.pos)
+
+%   Options:
+%   -v,  --verbose           more information
+%   -o,  --out SVG-FILE      output image name (*.svg)
+%   -rn, --ref-name STRING   reference name shown on output. If name
+%   has space, use "s, e.g. "Seq label".
+%   Default: name in header of position file.
+%   -tn, --tar-name STRING   target name shown on output
+%   -vv, --vertical          vertical view
+%   -nn, --no-nrc            do NOT show normalized
+%   relative compression (NRC)
+%   -nr, --no-redun          do NOT show self complexity
+%   -ni, --no-inv            do NOT show inverse maps
+%   -ng, --no-reg            do NOT show regular maps
+%   -l,  --link     INT      type of the link between maps: [1, 6]
+%   -c,  --color    INT      color mode: [0, 2]
+%   -p,  --opacity  FLOAT    opacity: [0.0, 1.0]
+%   -w,  --width    INT      width of the sequence: [15, 100]
+%   -s,  --space    INT      space between sequences: [15, 200]
+%   -f,  --mult     INT      multiplication factor for
+%   color ID: [1, 255]
+%   -b,  --begin    INT      beginning of color ID: [0, 255]
+%   -rt, --ref-tick INT      reference tick: [1, 4294967295]
+%   -tt, --tar-tick INT      target tick: [1, 4294967295]
+%   -th, --tick-human 0|1    tick human readable: 0=false, 1=true
+%   -m,  --min      INT      minimum block size: [1, 4294967295]
+%   -h,  --help              usage guide
+% \end{code}
 \begin{code}[style=bash]
-  SYNOPSIS
-  ./smashpp -viz  OPTIONS...  -o SVG-FILE  POS-FILE
+SYNOPSIS
+  ./smashpp -viz [OPTIONS]  -o <SVG-FILE>  <POS-FILE>
 
-  SAMPLE
+OPTIONS
+  Required:
+  <POS-FILE>         = position file, generated by
+                       Smash++ tool (*.pos)
 
-  DESCRIPTION
-  Mandatory arguments:
-  POS-FILE                 positions file, generated by
-  Smash++ tool (*.pos)
-
-  Options:
-  -v,  --verbose           more information
-  -o,  --out SVG-FILE      output image name (*.svg)
-  -rn, --ref-name STRING   reference name shown on output. If name
-  has space, use "s, e.g. "Seq label".
-  Default: name in header of position file.
-  -tn, --tar-name STRING   target name shown on output
-  -vv, --vertical          vertical view
-  -nn, --no-nrc            do NOT show normalized
-  relative compression (NRC)
-  -nr, --no-redun          do NOT show self complexity
-  -ni, --no-inv            do NOT show inverse maps
-  -ng, --no-reg            do NOT show regular maps
-  -l,  --link     INT      type of the link between maps: [1, 6]
-  -c,  --color    INT      color mode: [0, 2]
-  -p,  --opacity  FLOAT    opacity: [0.0, 1.0]
-  -w,  --width    INT      width of the sequence: [15, 100]
-  -s,  --space    INT      space between sequences: [15, 200]
-  -f,  --mult     INT      multiplication factor for
-  color ID: [1, 255]
-  -b,  --begin    INT      beginning of color ID: [0, 255]
-  -rt, --ref-tick INT      reference tick: [1, 4294967295]
-  -tt, --tar-tick INT      target tick: [1, 4294967295]
-  -th, --tick-human 0|1    tick human readable: 0=false, 1=true
-  -m,  --min      INT      minimum block size: [1, 4294967295]
-  -h,  --help              usage guide
+  Optional:
+  -o  <SVG-FILE>     = output image name (*.svg)             -> map.svg
+  -rn <STRING>       = reference name shown on output. If it
+                       has space, use double quotes, e.g.
+                       "Seq label". Default: name in header
+                       of position file
+  -tn <STRING>       = target name shown on output
+  -l  <INT>          = type of the link between maps: [1, 6] -> 1
+  -c  <INT>          = color mode: [0, 1]                    -> 0
+  -p  <FLOAT>        = opacity: [0.0, 1.0]                   -> 0.9
+  -w  <INT>          = width of the sequence: [15, 100]      -> 16
+  -s  <INT>          = space between sequences: [15, 200]    -> 62
+  -f  <INT>          = multiplication factor for             -> 43
+                       color ID: [1, 255]
+  -b  <INT>          = beginning of color ID: [0, 255]       -> 0
+  -rt <INT>          = reference tick: [1, 4294967295]
+  -tt <INT>          = target tick: [1, 4294967295]
+  -th [0][1]         = tick human readable: 0=false, 1=true  -> 1
+  -m  <INT>          = minimum block size: [1, 4294967295]   -> 1
+  -vv                = vertical view                         -> no
+  -nn                = do NOT show normalized relative       -> no
+                       compression (NRC)
+  -nr                = do NOT show self complexity           -> no
+  -ni                = do NOT show inverse maps              -> no
+  -ng                = do NOT show regular maps              -> no
+  -h                 = usage guide
+  -v                 = more information
+  --version          = show version
 \end{code}
 
 The output of \smashpp visualizer is an ``SVG'' file, which its name is determined by ``-o'' option. By default, it is named ``map.svg''. Names of the reference and the target, which are going to be printed on the output image, can be altered by ``-rn'' and ``-tn'', respectively. They are by default the names written in the positions file. To have a vertical view of the image, instead of the default horizontal view, one can use ``-vv'' trigger.
